<resources>
    <string name="app_name">Save</string>
    <string name="app_logo">app_logo</string>
    <string name="save_v1_0_0">Save v1.0.0</string>
    <string name="save_and_retrieve">Save and Retrieve</string>
    <string name="the_files_now">the files now.</string>
    <string name="log_in">Log In</string>
    <string name="a_valid_email_and_authentic_password_needed">A valid email and authentic password needed</string>
    <string name="let_s_get_started">Let\'s get started</string>
    <string name="emailaddress_gmail_com">emailaddress@gmail.com</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="asteric">********</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="back_option">back option</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="myemail_gmail_com">myemail@gmail.com</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="unable_to_log_in_kindly">Unable to Log in? Kindly</string>
    <string name="reset_password_here">Reset Password Here</string>
    <string name="to_reset_your_password_we_need_nyour_registered_email">To reset your password, we need\nyour registered email</string>
    <string name="reset">reset</string>
    <string name="or">or</string>
    <string name="write_note">- You are new to Save app.\n- You have not created any account before.</string>
    <string name="user_profile_option">user_profile_option</string>
    <string name="save_retrieve">Save and Retrieve</string>
    <string name="hi_temitope">Temitope</string>
    <string name="profile_picture">profile picture</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="first_name">First Name</string>
    <string name="phone_contact">Phone Contact</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="where">Where?</string>
    <string name="choose_your_destination">Choose your destination</string>
    <string name="my_images">My Images</string>
    <string name="my_documents">My Documents</string>
    <string name="my_videos">My Videos</string>
    <string name="my_audios">My Audios</string>
    <string name="what">What?</string>
    <string name="choose_file_category_to_upload">Choose file category to upload</string>
    <string name="add_image">Add Image</string>
    <string name="add_document">Add Document</string>
    <string name="add_audio">Add Audio</string>
    <string name="add_video">Add Video</string>
    <string name="click_to_view_files_uploaded_here">Click to view files uploaded here</string>

</resources>
