<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GetStartedActivity"
    android:background="@color/colorWhite">

    <ImageView
        android:id="@+id/go_back"
        android:layout_width="28dp"
        android:layout_height="30dp"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/back_option" />

    <TextView
        android:id="@+id/lets_get_started"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/let_s_get_started"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/go_back"
        android:textSize="26sp"
        android:textColor="@color/colorGrey"
        android:fontFamily="@font/made_tommy_medium"/>

    <TextView
        android:id="@+id/valid_email_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_valid_email_and_authentic_password_needed"
        app:layout_constraintTop_toBottomOf="@id/lets_get_started"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/made_tommy_regular"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/text_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/valid_email_text"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="@id/valid_email_text"
        android:text="@string/email"
        android:fontFamily="@font/made_tommy_regular"
        android:textSize="16sp"
        android:textColor="@color/colorGrey"/>

    <EditText
        android:id="@+id/input_email_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@id/text_email"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:importantForAutofill="yes"
        android:background="@drawable/email_field_background"
        android:layout_marginTop="10dp"
        android:hint="@string/emailaddress_gmail_com"
        android:textColor="@color/colorGrey"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:fontFamily="@font/made_tommy_regular"
        android:textColorHint="@color/lightGrey" />

    <TextView
        android:id="@+id/text_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/input_email_field"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@id/input_email_field"
        android:text="@string/password"
        android:fontFamily="@font/made_tommy_regular"
        android:textSize="16sp"
        android:textColor="@color/colorGrey"/>

    <EditText
        android:id="@+id/input_password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@id/text_password"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:importantForAutofill="yes"
        android:background="@drawable/email_field_background"
        android:layout_marginTop="10dp"
        android:hint="@string/asteric"
        android:textColor="@color/colorGrey"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:fontFamily="@font/made_tommy_regular"
        android:textColorHint="@color/lightGrey" />

    <Button
        android:id="@+id/signUp_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/get_started_background"
        app:layout_constraintTop_toBottomOf="@id/input_password_field"
        android:layout_marginTop="30dp"
        android:padding="14dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:fontFamily="@font/made_tommy_regular"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/dont_have_acct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/signUp_btn"
        android:text="@string/already_have_an_account_login"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="16sp"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@font/made_tommy_regular"
        android:textStyle="italic"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/dont_have_acct"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>