<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginSignUpActivity"
    android:layout_gravity="center"
    android:background="@color/colorWhite">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/save_logo"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/app_logo" />

    <TextView
        android:id="@+id/save_retrieve_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/logo"
        android:layout_marginTop="25dp"
        android:text="@string/save_and_retrieve"
        android:textColor="#E64B1A"
        android:fontFamily="@font/made_tommy_medium"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/the_files_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/the_files_now"
        app:layout_constraintTop_toBottomOf="@id/save_retrieve_data"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/colorGrey"
        android:textSize="22sp"
        android:fontFamily="@font/made_tommy_medium"/>

    <ImageView
        android:id="@+id/image_display"
        android:layout_width="match_parent"
        android:layout_height="330dp"
        app:layout_constraintTop_toBottomOf="@id/the_files_now"
        android:layout_marginTop="20dp"
        android:src="@drawable/home_page"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"/>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/image_display"
        android:layout_marginTop="20dp"
        android:padding="15dp"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:fontFamily="@font/made_tommy_regular"
        android:textSize="16sp"
        android:background="@drawable/login_background"
        android:textColor="@color/colorPrimary"/>

    <Button
        android:id="@+id/get_started_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/login_btn"
        android:layout_marginTop="20dp"
        android:padding="15dp"
        android:text="Get Started"
        android:textAllCaps="false"
        android:fontFamily="@font/made_tommy_regular"
        android:textSize="16sp"
        android:background="@drawable/get_started_background"
        android:textColor="@color/colorWhite"/>



</androidx.constraintlayout.widget.ConstraintLayout>