<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetPasswordActivity"
    android:background="@color/colorWhite">

    <ImageView
        android:id="@+id/go_back"
        android:layout_width="28dp"
        android:layout_height="30dp"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/back_option" />

    <TextView
        android:id="@+id/forget_password_here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password_here"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/go_back"
        android:textSize="26sp"
        android:textColor="@color/colorGrey"
        android:fontFamily="@font/made_tommy_medium"/>

    <TextView
        android:id="@+id/forget_passsword_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_reset_your_password_we_need_nyour_registered_email"
        app:layout_constraintTop_toBottomOf="@id/forget_password_here"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/made_tommy_regular"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/text_input_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/forget_passsword_note"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="@id/forget_passsword_note"
        android:text="@string/email"
        android:fontFamily="@font/made_tommy_regular"
        android:textSize="16sp"
        android:textColor="@color/colorGrey"/>

    <EditText
        android:id="@+id/enter_email_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@id/text_input_email"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:imeOptions="actionDone"
        android:inputType="textEmailAddress"
        android:importantForAutofill="yes"
        android:background="@drawable/email_field_background"
        android:layout_marginTop="10dp"
        android:hint="@string/emailaddress_gmail_com"
        android:textColor="@color/colorGrey"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:fontFamily="@font/made_tommy_regular"
        android:textColorHint="@color/lightGrey" />

    <Button
        android:id="@+id/reset_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/get_started_background"
        app:layout_constraintTop_toBottomOf="@id/enter_email_field"
        android:layout_marginTop="30dp"
        android:padding="14dp"
        android:text="@string/reset"
        android:textAllCaps="true"
        android:fontFamily="@font/made_tommy_regular"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/or"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/or"
        app:layout_constraintTop_toBottomOf="@id/reset_btn"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/made_tommy_regular"
        android:layout_marginStart="20dp"
        android:gravity="center"
        android:textColor="@color/lightGrey"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/creat_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Create new account"
        app:layout_constraintTop_toBottomOf="@id/or"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/made_tommy_regular"
        android:layout_marginStart="20dp"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/progressBar_cardview"
        android:layout_width="75dp"
        android:layout_height="75dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardElevation="10dp"
        app:cardCornerRadius="2dp"
        android:visibility="invisible"
        app:cardBackgroundColor="@color/colorWhite">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:visibility="invisible"
            app:layout_constraintTop_toTopOf="@id/progressBar_cardview"
            app:layout_constraintBottom_toBottomOf="@id/progressBar_cardview"
            android:layout_gravity="center"
            app:layout_constraintStart_toStartOf="@id/progressBar_cardview"
            app:layout_constraintEnd_toEndOf="@id/progressBar_cardview"/>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>