<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/colorWhite">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/save_logo"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/app_logo" />

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        android:textStyle="normal"
        android:fontFamily="@font/made_tommy_regular"
        android:textColor="@color/colorGrey"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/logo"
        android:layout_marginTop="10dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/text_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/welcome_text"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/email"
        android:fontFamily="@font/made_tommy_regular"
        android:textSize="16sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/colorGrey"/>

    <EditText
        android:id="@+id/enter_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingBottom="20dp"
        app:layout_constraintTop_toBottomOf="@id/text_email"
        android:hint="@string/myemail_gmail_com"
        android:backgroundTint="@color/colorPrimary"
        android:textSize="18sp"
        android:fontFamily="@font/made_tommy_regular"
        android:textColor="#686666"
        android:imeOptions="actionNext"
        android:autofillHints="email"
        android:inputType="textEmailAddress"/>

    <TextView
        android:id="@+id/text_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/enter_email"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:text="Password"
        android:fontFamily="@font/made_tommy_regular"
        android:textSize="16sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/colorGrey"/>

    <EditText
        android:id="@+id/enter_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:paddingBottom="20dp"
        app:layout_constraintTop_toBottomOf="@id/text_password"
        android:hint="@string/asteric"
        android:backgroundTint="@color/colorPrimary"
        android:textSize="18sp"
        android:fontFamily="@font/made_tommy_regular"
        android:textColor="#686666"
        android:imeOptions="actionDone"
        android:autofillHints="true"
        android:inputType="textPassword"/>

    <TextView
        android:id="@+id/forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@font/made_tommy_regular"
        app:layout_constraintTop_toBottomOf="@id/enter_password"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"/>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/forget_password"
        android:layout_marginTop="18dp"
        android:padding="15dp"
        android:text="Log In"
        android:textAllCaps="false"
        android:fontFamily="@font/made_tommy_regular"
        android:textSize="16sp"
        android:background="@drawable/get_started_background"
        android:textColor="@color/colorWhite"/>

    <TextView
        android:id="@+id/unable_to_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unable_to_log_in_kindly"
        app:layout_constraintTop_toBottomOf="@id/google_signIn"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/made_tommy_regular"/>

    <TextView
        android:id="@+id/if_unable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="if;"
        app:layout_constraintBottom_toBottomOf="@id/sign_up"
        app:layout_constraintTop_toTopOf="@id/sign_up"
        app:layout_constraintStart_toEndOf="@id/sign_up"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/made_tommy_regular"/>

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/unable_to_signup"
        app:layout_constraintBottom_toBottomOf="@id/unable_to_signup"
        app:layout_constraintTop_toTopOf="@id/unable_to_signup"
        android:layout_marginStart="5dp"/>

    <TextView
        android:id="@+id/notes_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:text="@string/write_note"
        android:fontFamily="@font/made_tommy_regular"
        app:layout_constraintTop_toBottomOf="@id/unable_to_signup"/>


    <androidx.cardview.widget.CardView
        android:id="@+id/progressBar_cardview"
        android:layout_width="75dp"
        android:layout_height="75dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardElevation="8dp"
        app:cardCornerRadius="2dp"
        android:visibility="invisible"
        app:cardBackgroundColor="@color/colorWhite">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_gravity="center"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/google_signIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/login_btn"
        android:layout_marginTop="20dp"
        app:cardElevation="5dp"
        app:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/login_background">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@color/colorWhite"
                android:src="@drawable/google"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:id="@+id/sign_in_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sign in with Google"
                android:fontFamily="@font/made_tommy_regular"
                android:textColor="@color/lightGrey"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:layout_marginStart="60dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>